# drone-sim

./: .gitignore  CMakeLists.txt
include/: quad.hpp
src/: main  main.cpp  quad.cpp
